<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".addInfo"
        android:orientation="vertical">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/dpm"
        android:contentDescription="@string/logo" />
    <TextView
        android:id="@+id/Organisme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="89dp"
        android:layout_marginLeft="89dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:hint="Direction des Peches Maritimes"
        android:textColorHint="@android:color/holo_red_light" />

    <LinearLayout
        android:layout_width="446dp"
        android:layout_height="44dp"
        android:orientation="horizontal"
        >


        <TextView
            android:layout_width="395dp"
            android:layout_height="match_parent"
            android:id="@+id/supprimer"
            android:hint="Supprimer Maree"
            android:gravity="center"

           />


    </LinearLayout>

    <EditText
        android:id="@+id/id"
        android:layout_marginTop="10dp"
        android:layout_width="282dp"
        android:layout_height="40dp"
        android:hint="@string/id_navire"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:importantForAutofill="no"
        android:inputType=""
        tools:targetApi="o" />
        <EditText
            android:id="@+id/textView"
            android:layout_marginTop="20dp"
            android:layout_width="282dp"
            android:layout_height="50dp"
            android:hint="@string/nom_navire"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:importantForAutofill="no"
            android:inputType=""
            tools:targetApi="o" />



        <Spinner
            android:layout_marginTop="20dp"
            android:id="@+id/spinner"
            android:autofillHints="@string/fab_transformation_sheet_behavior"
            android:layout_width="291dp"
            android:layout_height="33dp"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="80dp" tools:targetApi="o" />


    <EditText
        android:id="@+id/portD"
        android:layout_marginTop="10dp"
        android:layout_width="282dp"
        android:layout_height="50dp"
        android:hint="Port_Depart"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:importantForAutofill="no"
        android:inputType=""
        tools:targetApi="o" />

    <EditText
        android:id="@+id/textView2"
        android:layout_marginTop="10dp"
        android:layout_width="282dp"
        android:layout_height="50dp"
        android:hint="Date_Depart"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:importantForAutofill="no"
        android:inputType=""
        tools:targetApi="o" />

    <EditText
        android:id="@+id/textView3"
        android:layout_marginTop="10dp"
        android:layout_width="282dp"
        android:layout_height="50dp"
        android:hint="@string/heure_depart"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:importantForAutofill="no"
        android:inputType=""
        tools:targetApi="o" />

    <EditText
        android:id="@+id/textView4"
        android:layout_marginTop="10dp"
        android:layout_width="282dp"
        android:layout_height="50dp"
        android:hint="Date_arivee"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:importantForAutofill="no"

        android:inputType=""
        tools:targetApi="o" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="160dp"
        android:layout_marginTop="20dp"
        android:id="@+id/button"
        android:hint="Validez"
        android:textColorHint="@android:color/holo_red_dark"
        />
    </LinearLayout>

